Notifying handler about assigned case